いくつか記事追加

--- a/public/about/index.html
+++ b/public/about/index.html
@@ -17,10 +17,10 @@ TRPG/ゲーム/哲学/民俗学/音楽など、多岐にわたる興味を探求
 ―― らしいです。
 私がどんな人間か説明するより、ここにある作品？を見てもらったほうが説明になると思うので、是非。
 
-ふわふわディストーション？
+ここは一体何なんだ
 ここを作った理由については
 開場のお知らせ
-でも説明している通り、noteという場ではふわさしくないようなことをやっていきます。短いおふざけや、真面目と言われるような長いものまで。
+でも説明している通り、noteという場ではふわさしくないようなことをやっていきます。今は変なユーモアのようなものの放牧場です。真面目なものを書くのは、長い時間を要するのでいつになるのかわかりません。
 え？「ふわふわディストーション」が何かって？
 私の称号だよ。説明になってない？ならくだらないポストたちを見て推測してくださいな。">
 <meta name="author" content="yata">
@@ -158,10 +158,10 @@ TRPG/ゲーム/哲学/民俗学/音楽など、多岐にわたる興味を探求
 <p>―― らしいです。</p>
 <p>私がどんな人間か説明するより、ここにある作品？を見てもらったほうが説明になると思うので、是非。</p>
 <hr>
-<h2 id="ふわふわディストーション">ふわふわディストーション？<a hidden class="anchor" aria-hidden="true" href="#ふわふわディストーション">#</a></h2>
+<h2 id="ここは一体何なんだ">ここは一体何なんだ<a hidden class="anchor" aria-hidden="true" href="#ここは一体何なんだ">#</a></h2>
 <p>ここを作った理由については</p>
 <p><a href="https://fluffydistortion.netlify.app/posts/notice/">開場のお知らせ</a></p>
-<p>でも説明している通り、noteという場ではふわさしくないようなことをやっていきます。短いおふざけや、真面目と言われるような長いものまで。</p>
+<p>でも説明している通り、noteという場ではふわさしくないようなことをやっていきます。今は変なユーモアのようなものの放牧場です。真面目なものを書くのは、長い時間を要するのでいつになるのかわかりません。</p>
 <p>え？「<strong>ふわふわディストーション</strong>」が何かって？</p>
 <p>私の称号だよ。説明になってない？なら<a href="https://fluffydistortion.netlify.app/posts/">くだらないポストたち</a>を見て推測してくださいな。</p>
 
